syntax = "proto3";

package redigo;

option go_package = "github.com/erennakbas/strego/pkg/proto";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

// StreamMessage wraps all messages sent through Redis Streams
message StreamMessage {
  string id = 1;
  string stream = 2;
  string message_type = 3;
  google.protobuf.Any payload = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp scheduled_at = 6;
  map<string, string> metadata = 7;
  int32 retry_count = 8;
  int32 max_retries = 9;
}

// DelayedTask represents a task scheduled for future execution
message DelayedTask {
  string id = 1;
  string stream = 2;
  google.protobuf.Any payload = 3;
  google.protobuf.Timestamp execute_at = 4;
  map<string, string> metadata = 5;
  int32 retry_count = 6;
  int32 max_retries = 7;
} 